Code Review Changes: Rework streaming